--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -19,7 +19,7 @@
         <main>
         
         <ul> 
-            <li> <a href =" " > Mercado </a>       </li>
+            <li> <a href ="busca_mercado.html" > Mercado </a>       </li>
             <li> <a href =" " > Receitas  </a>        </li>
 
         </ul> 
