--- a/html/acompanhamento.html
+++ b/html/acompanhamento.html
@@ -1,59 +1,34 @@
 <!DOCTYPE html>
 <html lang = 'pt-BR'>
     <head>
-        <title> Eatogether </title>
+        <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        {% comment %} <link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/ParceirEats.css"> {% endcomment %}
+        <!---link rel="stylesheet" href="../../css/reset.css">
+        <link rel="stylesheet" href="../../css/Outros/ParceirEats.css">-->
 
 
     </head>
     <body>
         <header>
-            <a href ="../TelaInicial.html" >
+            <a href ="../carrinho.html" >
                 <img class="Arrow" src="../../img/Arrow.png">
             </a>
             <h1> ParceirEats </h1>
 
         </header>
         <main>
-        <ul>
-            <li>
-            <img src = "../../img/Perfil1.png" alt = 'Perfil 1'>
-            <p> Eduardo 
-                <div class= "descricao">
-                Refeições juntos: 21 </p>
-                </div>
-            </li>
 
-            <li>
-            <img src = "../../img/Perfil2.png"  alt = 'Perfil 2'> 
-            <p> Carlos
-                <div class= "descricao">
-                    Refeições juntos: 32 </p>
-                </div>
-            </li>
+        <iframe class="mapa" 
+            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5914.003426155082!2d-46.63352325856439!3d-23.58709820135416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sp!5e0!3m2!1spt-BR!2sbr!4v1586016700429!5m2!1spt-BR!2sbr"  
+            height="300"  style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+        </iframe>
 
-            <li>
-            <img src = "../../img/Perfil3.png"  alt = 'Perfil 3'>
-            <p> Felipe
-                <div class= "descricao">
-            Refeições juntos: 01 </p>
-                </div>
-            </li>
+        <p> Tempo estimado: 30 minutos </p>
 
-            <li>
-            <img src = "../../img/Perfil4.png"  alt = 'Perfil 4'> 
-            <p> <br> Lucas <br>
-                <div class= "descricao">
-            Refeições juntos: 08 </p>
-            </div>
-            </li>
+        <h3> Seu produto chegou? </h3>
+        <a href ="tela_inicial.html" > Sim  </a>
 
-
-
-        </ul>
         </main>
 
         <footer>
