Mais paginas html

--- a/html/receita_instrucao.html
+++ b/html/receita_instrucao.html
@@ -4,8 +4,8 @@
         <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/Acompanhamento.css">
+        <!---<link rel="stylesheet" href="../../css/reset.css">
+        <link rel="stylesheet" href="../../css/Outros/Acompanhamento.css">-->
 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
@@ -15,7 +15,7 @@
     <body>
         <header>
             <a href ="compra_creme.html" >
-            <img src="../../img/Arrow.png">
+            <img src="../../img/back-arrow.png">
             </a>
             <h1> Receita Strogonoff </h1>
 
