--- a/html/acompanhamento.html
+++ b/html/acompanhamento.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!---link rel="stylesheet" href="../../css/reset.css">
         <link rel="stylesheet" href="../../css/Outros/ParceirEats.css">-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
 
 
     </head>
     <body>
         <header>
             <a href ="../carrinho.html" >
-                <img class="Arrow" src="../../img/Arrow.png">
+                <img class="back-arrow" src="../../img/Arrow.png">
             </a>
             <h1> ParceirEats </h1>
 
