--- a/html/busca_mercado.html
+++ b/html/busca_mercado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = 'pt-BR'>
     <head>
-        <title>Prova</title>
+        <title>My Meal</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/reset.css">
@@ -21,53 +21,81 @@
         <input class="pesquisa" type="text" id="txtBusca" placeholder="Buscar..."/><button id="btnBusca">Buscar</button></li>
     
         <ul> 
+            <h2>Filtros</h2>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >McDonald's</a> 
+                <img src="../img/trigo.jpg" alt="Simbolo Celiacos">
+                <a href ="Outro.html" >Comida sem Glutem</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Bob's</a> 
+                <img src="../img/leite.jpg" alt="Simbolo Intolerancia a Lactose">
+                <a href ="Outro.html" >Comida sem Lactose</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Comelô</a> 
+                <img src="../img/acucar.jpg" alt="Simbolo Diabeticos">
+                <a href ="Outro.html" >Comidas para Diabéticos</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Temokerio</a> 
+                <img src="../img/lipidios.jpg" alt="Simbolo Dislipidemia">
+                <a href ="Outro.html" >Comidas sem lipidios</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/fibras.jpg" alt="Simbolo Constipação">
+                <a href ="Outro.html" >Comida rica em fibras</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/sal.jpg" alt="Simbolo Hipertenso">
+                <a href ="Outro.html" >Comida sem sal</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/proteinasis.jpg" alt="Simbolo finilcetonúria">
+                <a href ="Outro.html" >Comida com baixa proteina</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/amendoim.jpg" alt="Simbolo alergicos a amendoim">
+                <a href ="Outro.html" >Comida sem resquícios de amendoim</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/kosher.jpg" alt="Simbolo dieta Judaica">
+                <a href ="Outro.html" >Comidas Kosher</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/halal.png" alt="Simbolo dieta Islamica">
+                <a href ="Outro.html" >Comidas Halal</a> 
+            </li>
+        </ul>
+        <ul>
+            <h2>Seus mercados favoritos</h2>
+            <li> 
+                <img src="../img/paodeacucar.jpg" alt="Simbolo Pão de Açúcar">
+                <a href ="Outro.html" >Pão de Açucar</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/sitioverde.jpg" alt="Simbolo Sitio Verde">
+                <a href ="Outro.html" >Sitio Verde</a> 
             </li>
             <li> 
-                <img src="https://via.placeholder.com/50" alt="Logo restaurante">
-                <a href ="Outro.html" >Generico</a> 
+                <img src="../img/maisverde.jpg" alt="Simbolo Mais Verde">
+                <a href ="Outro.html" >Emporio Mais Verde</a> 
+            </li>
+            <li> 
+                <img src="../img/naturaldafazenda.jpg" alt="Simbolo Natural da Fazenda Veg">
+                <a href ="Outro.html" >Emporio Natural da Fazenda Veg</a> 
+            </li>
+            <li> 
+                <img src="../img/veggielifestore.jpg" alt="Simbolo Veggie Life">
+                <a href ="Outro.html" >Veggie Life Store</a> 
+            </li>
+            <li> 
+                <img src="../img/carrefour.jpg" alt="Simbolo Carrefour">
+                <a href ="Outro.html" >Carrefour</a> 
+            </li>
+            <li> 
+                <img src="../img/extra.jpg" alt="Simbolo Extra">
+                <a href ="Outro.html" >Extra</a> 
+            </li>
+            <li> 
+                <img src="../img/wallmart.png" alt="Simbolo Wallmart">
+                <a href ="Outro.html" >Wallmart</a> 
             </li>
         </ul> 
         <footer>
