--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -20,7 +20,7 @@
         
         <ul> 
             <li> <a href ="busca_mercado.html" > Mercado </a>       </li>
-            <li> <a href =" " > Receitas  </a>        </li>
+            <li> <a href ="busca_receitas.html" > Receitas  </a>        </li>
 
         </ul> 
         </main>
