--- a/html/busca_receitas.html
+++ b/html/busca_receitas.html
@@ -150,7 +150,7 @@
             </li>
         </ul>
         <ul>
-            <h2>Receitas Favoritas</h2>
+            <h2>Sem lactose</h2>
             <li> 
                 <img src="" alt="">
                 <a href ="Outro.html" ></a> 
