--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -4,8 +4,8 @@
         <title> Eatogether </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="../css/reset.css"> -->
-        <!-- <link rel="stylesheet" href="../css/TelaInicial.css"> -->
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
         <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet"> -->
@@ -18,9 +18,9 @@
         </header>
         <main>
         
-        <ul> 
-            <li> <a href ="busca_mercado.html" > Mercado </a>       </li>
-            <li> <a href ="busca_receitas.html" > Receitas  </a>        </li>
+        <ul class="ul_telainicial"> 
+            <li class="li_telainicial"> <a class = "a_telainicial" href ="busca_mercado.html" > Mercado </a>       </li>
+            <li class = "li_telainicial"> <a class = "a_telainicial" href ="busca_receitas.html" > Receitas  </a>        </li>
 
         </ul> 
         </main>
