--- a/html/compra_creme.html
+++ b/html/compra_creme.html
@@ -4,43 +4,43 @@
         <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/Acompanhamento.css">-->
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+        <!--<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">-->
 
 
     </head>
     <body>
         <header>
-            <a href ="compra_creme.html" >
-            <img src="../../img/back-arrow.png">
+            <a class = 'arrow' href ="compra_creme.html" >
+            <img src="../img/back-arrow.png" class="img_arrow">
             </a>
             <h1> My Meal </h1>
 
         </header>
-        <main>
+        <main class = 'resultado_main'>
 
-        <img src ='../img/italac.png'>
+        <img class = 'img_compra' src ='../img/italac.png'>
         
-        <p> Avaliação: Ótima! </p>
+        <p class = 'p'> Avaliação: Ótima! </p>
 
-        <p> Ingredientes </p>
-        <ul>
-            <li> <p> Frango</p></li>
-            <li> <p> Cebola</p></li>
-            <li> <p> Azeita</p></li>
-            <li> <p> Creme de leite</p></li>
-            <li> <p> Manteiga clarificada </p></li>
-            <li> <p> Pimenta </p></li>
-            <li> <p> Cogumelos </p></li>
-            <li> <p> Ketchup </p></li>
-            <li> <p> Maionese </p></li>
+        <p class = 'p'> Ingredientes </p>
+        <ul class="ingredientes_ul">
+            <li class="ingredientes_li"> Frango </li>
+            <li class="ingredientes_li"> Cebola </li>
+            <li class="ingredientes_li"> Azeita </li>
+            <li class="ingredientes_li"> Creme de leite </li>
+            <li class="ingredientes_li"> Manteiga clarificada </li>
+            <li class="ingredientes_li"> Pimenta </li>
+            <li class="ingredientes_li"> Cogumelos </li>
+            <li class="ingredientes_li"> Ketchup </li>
+            <li class="ingredientes_li"> Maionese </li>
         </ul>
 
-        <a href ="receita_instrucao.html" > Passo a passo  </a>
-        <a href ="outro.html" > Ir ao mercado  </a>
+        <a class = "a_telainicial" href ="receita_instrucao.html" > Passo a passo  </a>
+        <a class = "a_telainicial" href ="outro.html" > Ir ao mercado  </a>
 
         </main>
 
