--- a/html/receita_instrucao.html
+++ b/html/receita_instrucao.html
@@ -4,34 +4,33 @@
         <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!---<link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/Acompanhamento.css">-->
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
-
+        <!---<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> -->
 
     </head>
     <body>
         <header>
-            <a href ="compra_creme.html" >
-            <img src="../../img/back-arrow.png">
+            <a class = 'arrow'href ="compra_creme.html" >
+            <img class = 'img_arrow' src="../img/back-arrow.png">
             </a>
             <h1> Receita Strogonoff </h1>
 
         </header>
         <main>
 
-        <ul>
-            <li> <p>1. Em uma panela, misture o frango, o alho, a maionese, o sal e a pimenta; </p></li>
-            <li> <p>2. Em uma frigideira grande, derreta a manteiga clarificada e doure a cebola; </p></li>
-            <li> <p>3. Junte o frango temperado até que esteja dourado; </p></li>
-            <li> <p>4. Adicione os cogumelos, o ketchup e a mostarda; </p></li>
-            <li> <p>5. Incorpore o creme de leite e retire do fogo antes de ferver; </p></li>
-            <li> <p>6. Sirva com arroz branco e batata palha; </p></li>
+        <ul class = 'ul_receita'>
+            <li class = 'li_receita'> 1. Em uma panela, misture o frango, o alho, a maionese, o sal e a pimenta; </li>
+            <li class = 'li_receita'> 2. Em uma frigideira grande, derreta a manteiga clarificada e doure a cebola; </li>
+            <li class = 'li_receita'> 3. Junte o frango temperado até que esteja dourado; </li>
+            <li class = 'li_receita'> 4. Adicione os cogumelos, o ketchup e a mostarda; </li>
+            <li class = 'li_receita'> 5. Incorpore o creme de leite e retire do fogo antes de ferver; </li>
+            <li class = 'li_receita'> 6. Sirva com arroz branco e batata palha; </li>
         </ul>
 
-        <a href ="tela_inicial.html" > Voltar ao menu  </a>
+        <a class = "a_telainicial" href ="tela_inicial.html" > Voltar ao menu  </a>
 
         </main>
 
