--- a/html/busca_mercado.html
+++ b/html/busca_mercado.html
@@ -65,35 +65,35 @@
         </ul>
         <ul class = "ul_horizontal">
             <h2>Seus mercados favoritos</h2>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos"src="../img/paodeacucar.jpg" alt="Simbolo Pão de Açúcar">
                 <a href ="Outro.html" >Pão de Açucar</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos"src="../img/sitioverde.jpg" alt="Simbolo Sitio Verde">
                 <a href ="Outro.html" >Sitio Verde</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos"src="../img/maisverde.jpg" alt="Simbolo Mais Verde">
                 <a href ="Outro.html" >Emporio Mais Verde</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos"src="../img/naturaldafazenda.jpg" alt="Simbolo Natural da Fazenda Veg">
                 <a href ="Outro.html" >Emporio Natural da Fazenda Veg</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos" src="../img/veggielifestore.jpg" alt="Simbolo Veggie Life">
                 <a href ="Outro.html" >Veggie Life Store</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos">  
                 <img class="img_favoritos" src="../img/carrefour.jpg" alt="Simbolo Carrefour">
                 <a href ="Outro.html" >Carrefour</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos" src="../img/extra.jpg" alt="Simbolo Extra">
                 <a href ="Outro.html" >Extra</a> 
             </li>
-            <li> 
+            <li class = "li_favoritos"> 
                 <img class="img_favoritos" src="../img/wallmart.png" alt="Simbolo Wallmart">
                 <a href ="Outro.html" >Wallmart</a> 
             </li>
