--- a/html/acompanhamento.html
+++ b/html/acompanhamento.html
@@ -4,22 +4,19 @@
         <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!---link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/ParceirEats.css">-->
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
-
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
 
     </head>
     <body>
-        <header>
-            <a href ="../carrinho.html" >
-                <img class="back-arrow" src="../../img/Arrow.png">
+        <header class = 'header'>
+            <a class="arrow" href ="carrinho.html" >
+                <img class = 'img_arrow' src="../img/back-arrow.png">
             </a>
-            <h1> ParceirEats </h1>
+            <h1> MyMeal </h1>
 
         </header>
-        <main>
+        <main class = 'main'>
 
         <iframe class="mapa" 
             src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5914.003426155082!2d-46.63352325856439!3d-23.58709820135416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1salura%20sp!5e0!3m2!1spt-BR!2sbr!4v1586016700429!5m2!1spt-BR!2sbr"  
@@ -29,7 +26,7 @@
         <p> Tempo estimado: 30 minutos </p>
 
         <h3> Seu produto chegou? </h3>
-        <a href ="tela_inicial.html" > Sim  </a>
+        <a class = 'a_telainicial' href ="tela_inicial.html" > Sim  </a>
 
         </main>
 
