--- a/html/compra_creme.html
+++ b/html/compra_creme.html
@@ -13,7 +13,7 @@
 
     </head>
     <body>
-        <header>
+        <header class = 'header'>
             <a class = 'arrow' href ="compra_creme.html" >
             <img src="../img/back-arrow.png" class="img_arrow">
             </a>
@@ -22,25 +22,25 @@
         </header>
         <main class = 'resultado_main'>
 
-        <img class = 'img_compra' src ='../img/italac.png'>
-        
-        <p class = 'p'> Avaliação: Ótima! </p>
+            <img class = 'img_compra' src ='../img/italac.png'>
+            
+            <p class = 'p'> Avaliação: Ótima! </p>
 
-        <p class = 'p'> Ingredientes </p>
-        <ul class="ingredientes_ul">
-            <li class="ingredientes_li"> Frango </li>
-            <li class="ingredientes_li"> Cebola </li>
-            <li class="ingredientes_li"> Azeita </li>
-            <li class="ingredientes_li"> Creme de leite </li>
-            <li class="ingredientes_li"> Manteiga clarificada </li>
-            <li class="ingredientes_li"> Pimenta </li>
-            <li class="ingredientes_li"> Cogumelos </li>
-            <li class="ingredientes_li"> Ketchup </li>
-            <li class="ingredientes_li"> Maionese </li>
-        </ul>
+            <p class = 'p'> Ingredientes </p>
+            <ul class="ingredientes_ul">
+                <li class="ingredientes_li"> Frango </li>
+                <li class="ingredientes_li"> Cebola </li>
+                <li class="ingredientes_li"> Azeita </li>
+                <li class="ingredientes_li"> Creme de leite </li>
+                <li class="ingredientes_li"> Manteiga clarificada </li>
+                <li class="ingredientes_li"> Pimenta </li>
+                <li class="ingredientes_li"> Cogumelos </li>
+                <li class="ingredientes_li"> Ketchup </li>
+                <li class="ingredientes_li"> Maionese </li>
+            </ul>
 
-        <a class = "a_telainicial" href ="receita_instrucao.html" > Passo a passo  </a>
-        <a class = "a_telainicial" href ="outro.html" > Ir ao mercado  </a>
+            <a class = "a_telainicial" href ="receita_instrucao.html" > Passo a passo  </a>
+            <a class = "a_telainicial" href ="outro.html" > Ir ao mercado  </a>
 
         </main>
 
