--- a/html/compra_queijo.html
+++ b/html/compra_queijo.html
@@ -4,34 +4,34 @@
         <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--<link rel="stylesheet" href="../../css/reset.css">
-        <link rel="stylesheet" href="../../css/Outros/Acompanhamento.css">-->
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+        <!--<link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> -->
 
 
     </head>
     <body>
-        <header>
-            <a href ="compra_creme.html" >
-            <img src="../../img/back-arrow.png">
+        <header class = 'header'>
+            <a class = 'arrow' href ="compra_creme.html" >
+            <img src="../img/back-arrow.png" class="img_arrow">
             </a>
             <h1> My Meal </h1>
 
         </header>
-        <main>
+        <main class = 'resultado_main'>
 
-        <img src ='../img/quata.png'>
-        
-        <p> Queijo sem lactose Quatá, da maior qualidade, gosto indescritível! </p>
-        <p> Informações nutriocionais:  </p>
+            <img class = 'img_compra' src ='../img/quata.png'>
+            <ul class = "ul_compra_queijo">
+                <li class="li_compra_queijo"><h2 class = "h2_compra_queijo"> Queijo sem Lactose Quatá<h2></li>
+                <li class="li_compra_queijo">Da maior qualidade, gosto indescritível!</li>
+                <li class="li_compra_queijo">Informações nutriocionais: sem lactose!</li>
+                <li class="li_compra_queijo">Preço: 20,00R$ </li>
+            </ul>
 
-        <p> Preço: 20,00R$ </p>
-
-
-        <a href ="outro.html" > Receitas  </a>
-        <a href ="carrinho.html" > Adicionar ao carrinho  </a>
+            <a class = "a_telainicial" href ="outro.html" > Receitas  </a>
+            <a class = "a_telainicial" href ="carrinho.html" > Adicionar ao carrinho  </a>
 
         </main>
 
