--- a/html/receita_instrucao.html
+++ b/html/receita_instrucao.html
@@ -12,14 +12,14 @@
 
     </head>
     <body>
-        <header>
+        <header class = 'header'>
             <a class = 'arrow'href ="compra_creme.html" >
             <img class = 'img_arrow' src="../img/back-arrow.png">
             </a>
             <h1> Receita Strogonoff </h1>
 
         </header>
-        <main>
+        <main class = 'main'>
 
         <ul class = 'ul_receita'>
             <li class = 'li_receita'> 1. Em uma panela, misture o frango, o alho, a maionese, o sal e a pimenta; </li>
