--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -12,11 +12,11 @@
     </head>
 
     <body>
-        <header>
+        <header class = 'header'>
         <h1> My Meal </h1>
 
         </header>
-        <main>
+        <main class = 'main'>
         
         <ul class="ul_telainicial"> 
             <li class="li_telainicial"> <a class = "a_telainicial" href ="busca_mercado.html" > Mercado </a>       </li>
