--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
-         <header>
-            <a href =" .html" >
+         <header class = 'header'>
+            <a href ="busca_receitas.html" >
                 <img class="arrow" src="../img/back-arrow.png" alt ='flecha'>
             </a>
             <h1> My Meal </h1>
