Ajustando as imagens

--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -27,37 +27,33 @@
 
             <ul class = 'resultado_ul'>
                 <li class = 'resultado_li'>
-                <img class = 'resultado_img' src = "../img/italac.png" alt = ' '>
+                <img class = 'resultado_img' src = "../img/receita1.jpg" alt = ' '>
                 <a href = "compra_creme.html" class = 'resultado_a'>
-                    Creme de Leite sem Lactose Italac
+                    Linguine com molho branco e Filé Mignom
                 </a>
                 </li>
     
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = "../img/itambe.png" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/receitas2.png" alt = ' '>
                     <a class = 'resultado_a'> 
-                        Creme de Leite sem Lactose Itambé
+                        Escondidinho de Pernil
                     </a>
                     </li>
     
                 <li class = 'resultado_li'>
-                <img class = 'resultado_img'src = "../img/nestle.png" alt = ' '>
+                <img class = 'resultado_img'src = "../img/receitas3.jpg" alt = ' '>
                 <a class = 'resultado_a'>
-                    Creme de Leite sem Lactose Nestlé
+                    Fusilli com molho gongorloza
                 </a>
                 </li>
 
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = '../img/piracanjuba.png' alt = ' '>
+                    <img class = 'resultado_img' src = '../img/receitas4.jpg' alt = ' '>
                     <a class = 'resultado_a'>
-                        Creme de Leite sem Lactose Piracanjuba
+                        Linguine com molho rosé e presunto
                     </a>
                 </li>
-
             </ul>
-
         </main>
-
     </body>
-
 </html>
