--- a/html/compra_creme.html
+++ b/html/compra_creme.html
@@ -22,7 +22,7 @@
         </header>
         <main class = 'resultado_main'>
 
-            <img class = 'img_compra' src ='../img/italac.png'>
+            <img class = 'img_compra' src ='../img/lactose1.jpg'>
             
             <p class = 'p'> Avaliação: Ótima! </p>
 
