--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -27,31 +27,32 @@
 
             <ul class = 'resultado_ul'>
                 <li class = 'resultado_li'>
-                <img class = 'resultado_img' src = "../img/receita1.jpg" alt = ' '>
-                <a href = "compra_creme.html" class = 'resultado_a'>
-                    Linguine com molho branco e Filé Mignom
-                </a>
+                    <a class = 'a_resultado' href ="compra_creme.html" >
+                    <img class = 'resultado_img' src = "../img/lactose1.jpg" alt = ' '>
+                    <p class = 'texto'>
+                        Strogonoff
+                    </p>
+                    </a>
                 </li>
     
                 <li class = 'resultado_li'>
                     <img class = 'resultado_img' src = "../img/receitas2.png" alt = ' '>
-                    <a class = 'resultado_a'> 
+                    <p class = 'texto'>
                         Escondidinho de Pernil
-                    </a>
                     </li>
     
                 <li class = 'resultado_li'>
-                <img class = 'resultado_img'src = "../img/receitas3.jpg" alt = ' '>
-                <a class = 'resultado_a'>
-                    Fusilli com molho gongorloza
-                </a>
+                    <img class = 'resultado_img'src = "../img/receitas3.jpg" alt = ' '>
+                    <p class = 'texto'>
+                        Fusilli com molho gongorloza
+                    </p>
                 </li>
 
                 <li class = 'resultado_li'>
                     <img class = 'resultado_img' src = '../img/receitas4.jpg' alt = ' '>
-                    <a class = 'resultado_a'>
-                        Linguine com molho rosé e presunto
-                    </a>
+                    <p class = 'texto'>
+                        Linguine com molho rosé e 
+                    </p>
                 </li>
             </ul>
         </main>
