--- a/html/resultados_queijo.html
+++ b/html/resultados_queijo.html
@@ -21,16 +21,17 @@
             <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Queijo sem lactose"/><button id="btnBusca">Buscar</button></li>
             </ul>
             
-            <h2>
+            <h2 class= "resultado_h2">
                 Resultados
             </h2>
 
             <ul class = 'resultado_ul'>
                 <li class = 'resultado_li'>
+                    <a class = 'a_resultado' href ="compra_queijo.html" >
                     <img class = 'resultado_img' src = "../img/quata.png" alt = ' '>
-                    <p class = 'texto'>
+                    <p class = 'texto'> 
                         Queijo sem Lactose Quatá
-                    </p>
+                    </p></a>
                 </li>
     
                 <li class = 'resultado_li'>
