--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -11,11 +11,11 @@
         <header class = 'header_carrinho'>
             <ul class = 'header_outside_ul'>
             
-                <li><h1>Carrinho</h1></li>
+                <li><h1 class ='h1_carrinho'>Carrinho</h1></li>
 
                 <li><ul class = 'header_inside_ul'>
-                    <li>Entrega</li>
-                    <li>Retirada</li>
+                    <li class = 'entrega'>Entrega</li>
+                    <li class = 'retirada'>Retirada</li>
                     </ul>
                 </li>
             </ul>
