--- a/html/tela_inicial.html
+++ b/html/tela_inicial.html
@@ -7,20 +7,22 @@
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
-        <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <header class = 'header'>
-        <h1> My Meal </h1>
+            <h1> My Meal </h1>
 
         </header>
+
         <main class = 'main'>
         
         <ul class="ul_telainicial"> 
-            <li class="li_telainicial"> <a class = "a_telainicial" href ="busca_mercado.html" > Mercado </a>       </li>
-            <li class = "li_telainicial"> <a class = "a_telainicial" href ="busca_receitas.html" > Receitas  </a>        </li>
+
+            <li class="li_telainicial"> <a class = "a_telainicial" href ="busca_mercado.html" > Mercado </a></li>
+            <li class = "li_telainicial"> <a class = "a_telainicial" href ="busca_receitas.html" > Receitas</a></li>
 
         </ul> 
         </main>
