--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -30,7 +30,7 @@
                     <a class = 'a_resultado' href ="compra_creme.html" >
                     <img class = 'resultado_img' src = "../img/lactose1.jpg" alt = ' '>
                     <p class = 'texto'>
-                        Strogonoff
+                        Strogonoff de frango
                     </p>
                     </a>
                 </li>
