--- a/html/acompanhamento.html
+++ b/html/acompanhamento.html
@@ -11,7 +11,7 @@
     <body>
         <header class = 'header'>
             <a class="arrow" href ="carrinho.html" >
-                <img class = 'img_arrow' src="../img/back-arrow.png">
+                <img class = 'img_arrow' alt = 'seta de voltar' src="../img/back-arrow.png">
             </a>
             <h1> My Meal </h1>
 
