--- a/html/receita_instrucao.html
+++ b/html/receita_instrucao.html
@@ -13,8 +13,8 @@
     </head>
     <body>
         <header class = 'header'>
-            <a class = 'arrow'href ="compra_creme.html" >
-            <img class = 'img_arrow' src="../img/back-arrow.png">
+            <a class = 'arrow' href ="compra_creme.html" >
+            <img class = 'img_arrow' src="../img/back-arrow.png" alt = 'seta de voltar'>
             </a>
             <h1> Receita Strogonoff </h1>
 
