--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -11,7 +11,7 @@
     <body>
          <header class = 'header'>
             <a href ="busca_receitas.html" >
-                <img class="arrow" src="../img/back-arrow.png" alt ='flecha'>
+                <img class="arrow" src="../img/back-arrow.png" alt ='seta de voltar'>
             </a>
             <h1> My Meal </h1>
         </header>
@@ -28,7 +28,7 @@
             <ul class = 'resultado_ul'>
                 <li class = 'resultado_li'>
                     <a class = 'a_resultado' href ="compra_creme.html" >
-                    <img class = 'resultado_img' src = "../img/lactose1.jpg" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/lactose1.jpg" alt = 'Queijo Quata'>
                     <p class = 'texto'>
                         Strogonoff de frango
                     </p>
@@ -36,20 +36,20 @@
                 </li>
     
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = "../img/receitas2.png" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/receitas2.png" alt = 'Escondidinho'>
                     <p class = 'texto'>
                         Escondidinho de Pernil
                     </li>
     
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img'src = "../img/receitas3.jpg" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/receitas3.jpg" alt = 'Fusilli'>
                     <p class = 'texto'>
-                        Fusilli com molho gongorloza
+                        Fusilli com molho gorgonloza
                     </p>
                 </li>
 
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = '../img/receitas4.jpg' alt = ' '>
+                    <img class = 'resultado_img' src = '../img/receitas4.jpg' alt = 'Linguine'>
                     <p class = 'texto'>
                         Linguine com molho rosé e 
                     </p>
