--- a/html/resultados_queijo.html
+++ b/html/resultados_queijo.html
@@ -11,7 +11,7 @@
     <body>
          <header class = 'header'>
             <a href ="busca_mercado.html" >
-                <img class="arrow" src="../img/back-arrow.png" alt ='flecha'>
+                <img class="arrow" src="../img/back-arrow.png" alt ='seta de voltar'>
             </a>
             <h1> My Meal </h1>
         </header>
@@ -28,28 +28,28 @@
             <ul class = 'resultado_ul'>
                 <li class = 'resultado_li'>
                     <a class = 'a_resultado' href ="compra_queijo.html" >
-                    <img class = 'resultado_img' src = "../img/quata.png" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/quata.png" alt = 'Queijo Quata'>
                     <p class = 'texto'> 
                         Queijo sem Lactose Quatá
                     </p></a>
                 </li>
     
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = "../img/lacfree.jpg" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/lacfree.jpg" alt = 'Queijo LacFree'>
                     <p class = 'texto'> 
                         Queijo sem Lactose LacFree
                     </p>
                 </li>
     
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = "../img/tirol.jpg" alt = ' '>
+                    <img class = 'resultado_img' src = "../img/tirol.jpg" alt = 'Queijo Tirol'>
                     <p class = 'texto'>
                         Queijo sem Lactose Tirol
                     </p>
                 </li>
 
                 <li class = 'resultado_li'>
-                    <img class = 'resultado_img' src = '../img/tirolez.png' alt = ' '>
+                    <img class = 'resultado_img' src = '../img/tirolez.png' alt = 'Queijo Tirolez'>
                     <p class = 'texto'>
                         Queijo sem Lactose Tirolez
                     </p>
