--- a/html/compra_queijo.html
+++ b/html/compra_queijo.html
@@ -15,16 +15,16 @@
     <body>
         <header class = 'header'>
             <a class = 'arrow' href ="compra_creme.html" >
-            <img src="../img/back-arrow.png" class="img_arrow">
+            <img src="../img/back-arrow.png" class="img_arrow" alt = 'seta de voltar'>
             </a>
             <h1> My Meal </h1>
 
         </header>
         <main class = 'resultado_main'>
 
-            <img class = 'img_compra' src ='../img/quata.png'>
+            <img class = 'img_compra' src ='../img/quata.png' alt = 'Queijo Quata'>
             <ul class = "ul_compra_queijo">
-                <li class="li_compra_queijo"><h2 class = "h2_compra_queijo"> Queijo sem Lactose Quatá<h2></li>
+                <li class="li_compra_queijo"><p class = "h2_compra_queijo"> Queijo sem Lactose Quatá</p></li>
                 <li class="li_compra_queijo">Da maior qualidade, gosto indescritível!</li>
                 <li class="li_compra_queijo">Informações nutriocionais: sem lactose!</li>
                 <li class="li_compra_queijo">Preço: 20,00R$ </li>
