--- a/html/loading.html
+++ b/html/loading.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang = 'pt-BR'>
     <head>
-        <title> Eatogether </title>
+        <title> MyMeal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="../css/reset.css"> -->
-        <!-- <link rel="stylesheet" href="../css/TelaInicial.css"> -->
+        <link rel="stylesheet" href="../css/reset.css">
+        <link rel="stylesheet" href="../css/style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
-        <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
+        <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
     </head>
 
-    <body>
-        <main>
-            <h1> My Meal </h1>
+    <body class = 'bd_loading'>
+        <main class = 'mn_loading'>
+            <h1 class = 'h1_loading'> My Meal </h1>
         </main>
     </body>
 </html>
