--- a/html/busca_mercado.html
+++ b/html/busca_mercado.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
         <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
+        <script src="../js/mercado.js"></script>
     </head>
 
     <body>
@@ -21,7 +22,7 @@
 
         <main class = 'main'>
             <ul class="ul_buscar">
-                <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Buscar..."/><a class = 'a_buscar' href = 'resultados_queijo.html'>Buscar</a></li>
+                <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Buscar..."/><a class = 'a_buscar' href = 'resultados_queijo.html'><img class = "img_lupa " src="../img/lupa.png" alt="lupa de busca"></a></li>
             </ul>
 
             <ul class="ul_filtros"> 
