--- a/html/busca_receitas.html
+++ b/html/busca_receitas.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/mercado.js"></script>
     </head>
     <body>
         <header class = 'header'>
@@ -18,7 +19,7 @@
         <main class = 'main_receitas'>
             <ul class = 'receitas'> 
                 <li class = 'branco'><ul class = 'ul_buscar'>
-                <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Buscar..."/><a class = 'a_buscar' href = 'resultados_creme.html'>Buscar</a></li>
+                <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Buscar..."/><a class = 'a_buscar' href = 'resultados_creme.html'><img class = "img_lupa " src="../img/lupa.png" alt="lupa de busca"></a></li>
                 </ul></li>
         
                 <li class = "li_busca_receitas_receita"><ul class = 'ul_horizontal'> 
