--- a/html/loading.html
+++ b/html/loading.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = 'pt-BR'>
     <head>
-        <title> MyMeal </title>
+        <title> My Meal </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/reset.css">
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
         <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
+        <script src="../js/loading.js"></script>
     </head>
 
     <body class = 'bd_loading'>
