--- a/html/resultados_creme.html
+++ b/html/resultados_creme.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/resultado.js"></script>
+
     </head>
 
     <body>
@@ -18,7 +20,7 @@
         
         <main class="resultado_main">
             <ul>
-            <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Creme de leite sem lactose"/><button id="btnBusca">Buscar</button></li>
+            <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Creme de leite sem lactose"/><img class = "img_lupa " src="../img/lupa.png" alt="lupa de busca"></li>
             </ul>
             
             <h2 class= "resultado_h2">
