--- a/html/resultados_queijo.html
+++ b/html/resultados_queijo.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/reset.css">
         <link rel="stylesheet" href="../css/style.css">
+        <script src="../js/resultado.js"></script>
     </head>
 
     <body>
@@ -17,8 +18,8 @@
         </header>
         
         <main class="resultado_main">
-            <ul>
-            <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Queijo sem lactose"/><button id="btnBusca">Buscar</button></li>
+            <ul class = 'ul_buscar'>
+            <li><input class="pesquisa" type="text" id="txtBusca" placeholder="Queijo sem lactose"/><img class = "img_lupa " src="../img/lupa.png" alt="lupa de busca"></li>
             </ul>
             
             <h2 class= "resultado_h2">
